--- a/_templates/aboutme.html
+++ b/_templates/aboutme.html
@@ -1,14 +1,15 @@
-<div class="profile-pic"><img src="{{ pathto('_static/profile.png', 1) }}" /></div>
+<div class="profile-pic"><img src="{{ pathto('_static/profile-picture.png', 1) }}" /></div>
 
 <div class="bio-info">
     <div class="name">
-        NAME (HANDLE)
+        Adriaan van Niekerk
     </div>
     <div class="focusareas">
-        Tagline
+        Salesforce | Thermodynamics | Home Automation
     </div>
 
     <div class="whatido">
-        A paragraph about myself
+        I am an active user of Salesforce and learning as I go. 
+        Currently making magic happen at <a href="https://canonical.com/">Canonical</a>.
     </div>
 </div>
