deploy: 47f72a60cb73b650c98b8117376692068d9a5fc0

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Recent Posts &#8212; adriaansblog 1.0 documentation</title>
+    <title>Recent Posts &#8212; Adriaan&#39;s Blog  documentation</title>
   
   
   
@@ -38,7 +38,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=94e0f085"></script>
+    <script src="_static/documentation_options.js?v=187304be"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'index';</script>
@@ -49,6 +49,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
+
+<link
+  rel="alternate"
+  type="application/atom+xml"
+  href="blog/atom.xml"
+  title="Adriaan's Blog"
+/>
 
 
 
@@ -125,7 +132,7 @@
   
   
   
-    <p class="title logo__title">adriaansblog 1.0 documentation</p>
+    <p class="title logo__title">Adriaan's Blog</p>
   
 </a></div>
     
@@ -278,18 +285,19 @@ document.write(`
   </div>
   
     <div class="sidebar-primary-items__start sidebar-primary__section">
-        <div class="sidebar-primary-item"><div class="profile-pic"><img src="_static/profile.png" /></div>
+        <div class="sidebar-primary-item"><div class="profile-pic"><img src="_static/profile-picture.png" /></div>
 
 <div class="bio-info">
     <div class="name">
-        NAME (HANDLE)
+        Adriaan van Niekerk
     </div>
     <div class="focusareas">
-        Tagline
+        Salesforce | Thermodynamics | Home Automation
     </div>
 
     <div class="whatido">
-        A paragraph about myself
+        I am an active user of Salesforce and learning as I go. 
+        Currently making magic happen at <a href="https://canonical.com/">Canonical</a>.
     </div>
 </div></div>
     </div>
