--- a/search/index.html
+++ b/search/index.html
@@ -6,7 +6,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - adriaansblog 1.0 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - Adriaan's Blog  documentation</title>
   
   
   
@@ -36,7 +36,7 @@
 <link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../_static/documentation_options.js?v=94e0f085"></script>
+    <script src="../_static/documentation_options.js?v=187304be"></script>
     <script src="../_static/doctools.js?v=9a2dae69"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'search';</script>
@@ -49,6 +49,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
+
+<link
+  rel="alternate"
+  type="application/atom+xml"
+  href="../blog/atom.xml"
+  title="Adriaan's Blog"
+/>
 
 
 
@@ -125,7 +132,7 @@
   
   
   
-    <p class="title logo__title">adriaansblog 1.0 documentation</p>
+    <p class="title logo__title">Adriaan's Blog</p>
   
 </a></div>
     
