deploy: ab255312db417c2cb3fa0d04534c73f7a722c61b

--- a/about/index.html
+++ b/about/index.html
@@ -295,7 +295,8 @@ document.write(`
     </div>
 
     <div class="whatido">
-        I am an active user of Salesforce and learning as I go. 
+        Mechanical Engineer turned Salesforce Consultant. 
+        I love using programming for any problems that come my way and automating my life. 
         Currently making magic happen at <a href="https://canonical.com/">Canonical</a>.
     </div>
 </div></div>
