--- a/about/index.html
+++ b/about/index.html
@@ -160,6 +160,13 @@
   </a>
 </li>
 
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="../published/">
+    Published
+  </a>
+</li>
+
   </ul>
 </nav></div>
       
@@ -254,6 +261,13 @@ document.write(`
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../blog/">
     All Blog Posts
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="../published/">
+    Published
   </a>
 </li>
 
