--- a/search/index.html
+++ b/search/index.html
@@ -159,6 +159,13 @@
   </a>
 </li>
 
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="../published/">
+    Published
+  </a>
+</li>
+
   </ul>
 </nav></div>
       
@@ -251,6 +258,13 @@ document.write(`
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../blog/">
     All Blog Posts
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="../published/">
+    Published
   </a>
 </li>
 
