--- a/_templates/hello.html
+++ b/_templates/hello.html
@@ -1,4 +1,4 @@
-<div class="profile-pic"><img src="{{ pathto('_static/images/profile-picture.png', 1) }}" /></div>
+<div class="profile-pic"><img src="{{ pathto('_static/profile-picture.png', 1) }}" /></div>
 
 <div class="bio-info">
     <div class="name">
